fix alignement page paiement

--- a/app/assets/stylesheets/pages/_payment.scss
+++ b/app/assets/stylesheets/pages/_payment.scss
@@ -1,5 +1,7 @@
 #payment-content {
   text-align: center;
+  width: 70%;
+
 }
 
 .payment-title {
@@ -11,15 +13,15 @@
   box-sizing: border-box;
   margin: 1em;
   padding: 0.25em 0.5em;
-
   color: white;
-  font-size: inherit;
-  font-weight: 700;
+
 }
 
 .payment-description {
-  text-align: center;
+  display: inline;
   color: white;
+  font-weight: 300;
+
 }
 .payment-action {
   text-align: center;
